--- a/src/app/Shared/footer/footer.component.html
+++ b/src/app/Shared/footer/footer.component.html
@@ -1,6 +1,6 @@
-<footer class="bg-light-subtle p-3 text-center rounded-3 m-3 mt-0 shadow">
+<footer class="bg-white-200 p-3 text-center rounded-lg m-3 mt-0 shadow">
     &copy; 2024
-    <span [ngClass]=" isDarkMode ? 'text-info' : 'text-primary'">
+    <span [ngClass]=" isDarkMode ? 'text-cyan-400' : 'text-blue-600'">
         NIXO Payments Solutions Pvt Ltd
     </span>
     . All rights reserved.
