--- a/src/app/Shared/page-spinner/page-spinner.component.html
+++ b/src/app/Shared/page-spinner/page-spinner.component.html
@@ -1,7 +1,7 @@
 <div class="load-wrapper bg-white">
-    <div id="loader" class="d-flex justify-content-center align-items-center text-center position-relative">
+    <div id="loader" class="w-full h-screen flex items-center justify-center text-center relative">
         <h1 id="text">
-            <img src="https://cdn.prod.website-files.com/6762119e1fbfb186d2174b6a/6762119e1fbfb186d21766fa_673356bd003f74c018bea028_67040609d2a0e920a1cbb6ab_6134707265a929f4cdfc1f6d_5.gif"
+            <img src="https://cdn.dribbble.com/userupload/42363997/file/original-fe18d601d13ae5ff2665cb7ad468f86c.gif"
                 alt="placeholder" style="height: auto;">
         </h1>
     </div>
