--- a/src/app/UserComponents/header/header.component.html
+++ b/src/app/UserComponents/header/header.component.html
@@ -73,3 +73,8 @@
     </div>
   </nav>
 </header>
+
+
+<button class=" p-5 bg-red-50 text-red-600 hover:bg-red-100 w-full" (click)="viewToast()">
+  View Toast
+</button>
