--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,3 +1,8 @@
+<app-prime-ng-toast></app-prime-ng-toast>
+<app-page-spinner *ngIf="isLoading"></app-page-spinner>
+
+
+
 <app-header *ngIf="isGuest()"></app-header>
 <app-user-header *ngIf="isUser()"></app-user-header>
 
@@ -5,3 +10,5 @@
 
 
 <router-outlet></router-outlet>
+
+<app-footer></app-footer>
