--- a/src/app/Shared/prime-ng-toast/prime-ng-toast.component.html
+++ b/src/app/Shared/prime-ng-toast/prime-ng-toast.component.html
@@ -1,6 +1,6 @@
 <p-toast position="bottom-right">
     <ng-template let-message pTemplate="message">
-        <div class="p-toast-message p-3 p-toast-message-{{message.severity}} border-0 shadow-none mb-0">
+        <div class="p-toast-message p-3 p-toast-message-{{message.severity}} border-0 shadow-none mb-0 bg-red-600">
             <!-- style="min-width: 22rem;"> -->
             <div class="p-toast-message-content p-0">
                 <span class="p-toast-summary">{{message.summary}}</span>
