--- a/src/app/UserComponents/buy-plans/buy-plans.component.html
+++ b/src/app/UserComponents/buy-plans/buy-plans.component.html
@@ -16,7 +16,8 @@
     <!-- Plans -->
     <div class="flex flex-col gap-10 md:flex-col">
       <!-- Monthly Plan -->
-      <div class="relative bg-white border border-gray-200 rounded-2xl shadow-lg hover:shadow-2xl transition-all overflow-hidden group p-8 flex flex-col md:flex-row items-center gap-8">
+      <div
+        class="relative bg-white border border-gray-200 rounded-2xl shadow-lg hover:shadow-2xl transition-all overflow-hidden group p-8 flex flex-col md:flex-row items-center gap-8">
         <!-- Icon -->
         <i class="fa-solid fa-motorcycle text-blue-600 text-[90px] mb-4 md:mb-0"></i>
 
@@ -28,14 +29,16 @@
           <p class="font-bold text-slate-700 mb-2">1 tunnel available</p>
 
           <div class="text-4xl font-extrabold text-gray-900 mb-6">₹299.00</div>
-          <button class="px-8 py-3 bg-[#85BBE6] text-white font-bold rounded-lg shadow  hover:scale-[1.08] transition-transform">
+          <button
+            class="px-8 py-3 bg-[#85BBE6] text-white font-bold rounded-lg shadow  hover:scale-[1.08] transition-transform">
             Buy Now
           </button>
         </div>
       </div>
 
       <!-- Annual Plan -->
-      <div class="relative bg-[#85BBE6] text-white border border-transparent rounded-2xl shadow-xl hover:shadow-2xl transition-all overflow-hidden group p-8 flex flex-col md:flex-row items-center gap-8">
+      <div
+        class="relative bg-[#85BBE6] text-white border border-transparent rounded-2xl shadow-xl hover:shadow-2xl transition-all overflow-hidden group p-8 flex flex-col md:flex-row items-center gap-8">
         <!-- Icon -->
         <i class="fa-solid fa-car text-yellow-300 text-[90px] mb-4 md:mb-0"></i>
 
@@ -47,7 +50,8 @@
           <p class=" font-bold text-slate-900 mb-2">1 tunnel available</p>
 
           <div class="text-4xl text-slate-900 font-extrabold  mb-6">₹2999.00</div>
-          <button class="px-8 py-3 bg-white text-gray-900 font-bold rounded-lg shadow  hover:scale-[1.08] transition-transform">
+          <button
+            class="px-8 py-3 bg-white text-gray-900 font-bold rounded-lg shadow  hover:scale-[1.08] transition-transform">
             Buy Now
           </button>
         </div>
