--- a/src/app/GuestComponents/resend-activation-link/resend-activation-link.component.html
+++ b/src/app/GuestComponents/resend-activation-link/resend-activation-link.component.html
@@ -1,1 +1,21 @@
-<p>resend-activation-link works!</p>
+<div class="bg-gray-50 flex items-center justify-center min-h-screen px-4">
+  <div class="bg-white rounded-2xl shadow-lg max-w-md w-full p-8 text-center">
+    <img 
+      src="https://encrypted-tbn0.gstatic.com/images?q=tbn:ANd9GcRF_s9CVyhL_tX06Liues3yyMZkvgnpTuf4aA&s" 
+      alt="Activation Email" 
+      class="mx-auto w-48 h-48  mb-6">
+    <h1 class="text-2xl font-bold text-gray-900 mb-2">Activate Your Account</h1>
+    <p class="text-gray-600 mb-6">
+      We’ve sent you an activation email. Didn’t receive it? Click the button below to resend the activation link.
+    </p>
+    <input type="text" name="" id="" class="w-full border-[1px] outline-none  text-black px-6 font-semibold py-3 rounded-lg shadow-md transition-colors mb-2">
+    <button 
+      class="w-full bg-blue-600 hover:bg-blue-700 text-white font-semibold py-3 rounded-lg shadow-md transition-colors">
+      Resend Activation Link
+    </button>
+    <p class="text-gray-400 text-sm mt-4">
+      Check your spam folder if you don’t see the email.
+    </p>
+  </div>
+
+</div>
