--- a/src/app/UserComponents/tunnel-and-subscription/tunnel-and-subscription.component.html
+++ b/src/app/UserComponents/tunnel-and-subscription/tunnel-and-subscription.component.html
@@ -35,6 +35,10 @@
           </tr>
         </tbody>
       </table>
+        <div class="flex flex-col items-center justify-center py-12 text-gray-500">
+        <i class="fa-solid fa-receipt text-5xl mb-4"></i>
+        <p class="text-sm">No transactions found yet.</p>
+      </div>
     </div>
   </div>
 
@@ -63,6 +67,10 @@
             </tr>
           </tbody>
         </table>
+          <div class="flex flex-col items-center justify-center py-12 text-gray-500">
+        <i class="fa-solid fa-receipt text-5xl mb-4"></i>
+        <p class="text-sm">No transactions found yet.</p>
+      </div>
       </div>
     </div>
   </div>
